# MovieSemanticSearch_Server

./: .gitignore  AGENTS.md  CLAUDE.md  Caddyfile  DIFF_CONTEXT.md  all_providers.jsonl  backfill_award_category_tags.py  backfill_award_name_entries.py  backfill_franchise_entries_and_tokens.py  backfill_live_action_keyword.py  backfill_production_brands_and_companies.py  cinemind_backend_context.md  concept_tags_table.md  concept_tags_test_movies.py  docker-compose.yml  docker-compose.yml.bak  failed_fetches.json  failed_tests.txt  llm_generation_final_improvement_proposal.md  main_page.html  popular_movies_posters.json  pyproject.toml  query_test_cases.py  ranks.json  run_concept_tags_generation.py  run_gradio_ui.py  run_orchestrator.py  run_search.py  run_search_json.py  sample_queries.md  saved_imdb_movies.json  search_deepdive.md  semantic_definitions_exploration.md  similar_movie_samples.json  test_v3_endpoints.ipynb  vector_routing_context.md  vector_routing_system_prompts.py
api/: Dockerfile  cli_search.py  individual_vector_space_searching.ipynb  main.py  outcome.py  requirements.txt  sample_searching.ipynb
cached_data/: sample_cast_crew.html  sample_imdb_response.html  sample_parent_guide.html  sample_plot_keywords.html  sample_synopsis.html
certs/: origin.key  origin.pem
db/: chronological_scoring.py  ingest_movie.py  lexical_search.py  metadata_scoring.py  migrate_split_franchise_columns.py  postgres.py  qdrant.py  redis.py  reranking.py  search.py  tmdb.py  trending_movies.py  vector_scoring.py  vector_search.py
docs/: PROJECT.md  TODO.md  (+7 more)
(+942 files in other folders)
