[project]
name = "movie-finder-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "chromadb>=1.3.7",
    "dotenv>=0.9.9",
    "gradio>=5.23.1",
    "ipykernel>=6.30.1",
    "langchain>=1.2.0",
    "matplotlib>=3.10.8",
    "nbformat>=4.2.0",
    "numpy>=2.3.5",
    "openai>=2.13.0",
    "plotly>=6.5.0",
    "pydantic>=2.12.5",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "selenium>=4.39.0",
    "tqdm>=4.66.0",
]
